<?xml version="1.0"?>
<package>
  <name>shop2_ros</name>
  <version>0.0.1</version>
  <description>The shop2 HTN planner with roslisp package</description>

  <maintainer email="jsyoo5b@gmail.com">JaeSang Yoo</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>
  <build_depend>sbcl</build_depend>
  <build_depend>alexandria</build_depend>
  
  <run_depend>roslisp</run_depend>
  <run_depend>sbcl</run_depend>
  <run_depend>alexandria</run_depend>
</package>
